snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha1
79a02a59956301b3b46c08ffd58ede63879e47a8